Refactored to add utility class and eliminate direct calls to System.out